--- a/M5/M5D8/UPLOAD SU GITHUB/EpiBooksNavigation/navigationepibooks/package.json
+++ b/M5/M5D8/UPLOAD SU GITHUB/EpiBooksNavigation/navigationepibooks/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "@material-tailwind/html": "^2.0.0",
     "@material-tailwind/react": "^1.4.2",
     "@reduxjs/toolkit": "^1.9.3",
