--- a/M6/M6D1/APPUNTI/SERVEREPIBOOKS/.env
+++ b/M6/M6D1/APPUNTI/SERVEREPIBOOKS/.env
@@ -1,2 +1,4 @@
-MONGODB_URL= mongodb+srv://andreabramucci:J05XkLGEpExmXTa6@epibooksdb.q1vkcsw.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://andreabramucci:yyJH5ugMl17X6zvA@cluster0.sf1v3sj.mongodb.net/test
+retryWrites=true&w=majority;
 JWT_SECRET=A3D3FT432fdetfhfgwsdfwwe57645643
+
