--- a/M6/M6D1/UPLOAD SU GITHUB/striveblog/striveblog/package.json
+++ b/M6/M6D1/UPLOAD SU GITHUB/striveblog/striveblog/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.8.0",
     "react-jsx": "^1.0.0",
     "react-quill": "^2.0.0",
@@ -43,6 +44,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_STRIVE_API"
     ]
   }
 }
