--- a/M6/M6D1/APPUNTI/serverepibooks2/package.json
+++ b/M6/M6D1/APPUNTI/serverepibooks2/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "serverepibooks",
+  "name": "serverepibooks2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js"
   },
@@ -13,18 +13,16 @@
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.35.0",
-    "cloudinary-multer": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "expres": "^0.0.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.1",
+    "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "path": "^0.12.7",
-    "pm2": "^5.3.0"
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.22"
   }
 }
